uptade paragrafo e negritos

--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
     <main>
         <h1>História do Mascote Android</h1>
 
-            <p>Provavelmente você sabe que o sistema operacional <strong>Android</strong>, mantido pelo <strong>Google</strong> é um dos mais utilizados para dispositivos móveis em todo o mundo. Mas tavez você não saiba que o seu simpático mascote tem um nome e uma história muito curiosa? Pois acompanhe esse artigo para aprender muita coisa sobre esse robozinho.</p>
+            <p>Provavelmente você sabe que o sistema operacional <strong class="negrito">Android</strong>, mantido pelo <strong class="negrito">Google</strong> é um dos mais utilizados para dispositivos móveis em todo o mundo. Mas tavez você não saiba que o seu simpático mascote tem um nome e uma história muito curiosa? Pois acompanhe esse artigo para aprender muita coisa sobre esse robozinho.</p>
 
         <h2>A Primeira versão</h2>
 
@@ -54,7 +54,7 @@
             <img src="imagens/irina-blok.jpg" alt="irina-blok">
         </picture>
 
-            <p>A ideia principal da Irina era representar tudo graficamente com poucos traços e de forma mais chapada. O desenho também deveria gerar identificação rápida com quem o olha. Surgiu então o Bugdroid, o novo mascote do Android.</p>
+            <p>A ideia principal da <strong class="negrito">Irina</strong> era representar tudo graficamente com poucos traços e de forma mais chapada. O desenho também deveria gerar identificação rápida com quem o olha. Surgiu então o Bugdroid, o novo mascote do Android.</p>
 
             <div class="bugdroid"><img src="imagens/bugdroid.png" alt="foto-bugdroid"></div>
 
@@ -133,7 +133,7 @@
                     </ul>
 
                         <p>Infelizmente, o Android Q não existiu, pois o Google resolveu pôr fim a essa divertida prática e começou a usar numerações, o que deu origem ao Android 10.</p>
-
+                        <br>
                         <p>Acesse aqui o site Android History para conhecer a sequência das versões "adocicadas" e o que cada uma trouxe para o sistema Android.</p>
         </aside>
 
